...
          showInputNewFolderNameDialog = false
          showSelectFolderDialog = true
        },
        onConfirm = { name ->
          showInputNewFolderNameDialog = false
          folderViewModel.createNewFolderFromName(
              name,
              {
                converterViewModel.savePdfToFolder(
                    it,
                    Uri.fromFile(generatedPdf),
                    context,
                    { converterViewModel.deleteGeneratedPdf() },
...
 */
@Composable
fun PdfNameInputDialog(pdfFileName: String, onDismiss: () -> Unit, onConfirm: (String) -> Unit) {
  var inputText by remember { mutableStateOf(pdfFileName) } // Initialized with the default name

  AlertDialog(
      modifier = Modifier.testTag("pdfNameInputDialog"),
      onDismissRequest = onDismiss,
      title = {
        Text(
            "Enter a name for the PDF file that will be generated",
            modifier = Modifier.fillMaxWidth(),
            textAlign = TextAlign.Center)
      },
      text = {
        OutlinedTextField(
            modifier = Modifier.testTag("pdfNameInput"),
            value = inputText,
            onValueChange = { inputText = it },
            label = { Text("PDF File Name") })
      },
      confirmButton = {
        Button(
            modifier = Modifier.testTag("confirmCreatePdfButton"),
            enabled = inputText.isNotEmpty(), // If input text is empty confirm button is disabled
            onClick = { onConfirm(inputText) }) {
              Text("Create PDF")
            }
      },
      dismissButton = {
        Button(onClick = onDismiss, modifier = Modifier.testTag("dismissCreatePdfButton")) {
          Text("Cancel")
        }
      })
}

/**
...
 *
 * @param onAbort Action to be performed when the abort PDF generation button is clicked
 */
@Composable
fun LoadingIndicator(onAbort: () -> Unit) {
  Column(
      modifier = Modifier.fillMaxSize().testTag("loadingIndicator"),
      verticalArrangement = Arrangement.Center,
      horizontalAlignment = Alignment.CenterHorizontally) {
        CircularProgressIndicator(
            color = Color.LightGray,
            trackColor = Color.Cyan,
            strokeWidth = 10.dp,
            strokeCap = StrokeCap.Round)
        Spacer(modifier = Modifier.height(16.dp))
        Button(onClick = onAbort, modifier = Modifier.testTag("abortButton")) {
          Text("Abort PDF Generation")
        }
      }
}

/**
...
 * @param onDismiss Action to be performed when the dialog is dismissed
 * @param onConfirm Action to be performed when the dialog is confirmed
 */
@Composable
fun InfoWindow(title: String, text: String, onDismiss: () -> Unit, onConfirm: () -> Unit) {
  AlertDialog(
      modifier = Modifier.testTag("infoWindow"),
      onDismissRequest = onDismiss,
      title = {
        Text(
            title,
            modifier = Modifier.fillMaxWidth().testTag("infoWindowTitle"),
            textAlign = TextAlign.Center)
      },
      text = { Text(text, modifier = Modifier.fillMaxWidth().testTag("infoWindowText")) },
      confirmButton = {
        Button(
            onClick = onConfirm,
            modifier = Modifier.fillMaxWidth().testTag("infoWindowConfirmButton")) {
              Text("Select file")
            }
      },
      dismissButton = {
        Button(
            onClick = onDismiss,
            modifier = Modifier.fillMaxWidth().testTag("infoWindowDismissButton")) {
              Text("Cancel")
            }
      })
}

/**
...
fun SelectDestinationDialog(
    onDiscard: () -> Unit,
    onDeviceStorageClick: () -> Unit,
    onFoldersClick: () -> Unit
) {
  AlertDialog(
      modifier = Modifier.testTag("selectDestinationDialog"),
      onDismissRequest = {
        /**
         * Don't allow the user to dismiss the dialog by clicking outside of it, the user needs to
         * explicitly take a decision regarding the generated file to avoid losing the file by
         * mistake and having to restart the file generation.
         */
...
            modifier = Modifier.fillMaxWidth(),
            horizontalAlignment = Alignment.CenterHorizontally) {
              // Button to proceed towards selecting the folder in which the user wants to save the
              // PDF from the app folders
              Button(
                  onClick = { onFoldersClick() },
                  modifier = Modifier.fillMaxWidth().testTag("appFoldersButton")) {
                    Text("App folders")
                  }
              // Button to save the PDF in the device storage
              Button(
                  onClick = { onDeviceStorageClick() },
                  modifier = Modifier.fillMaxWidth().testTag("deviceStorageButton")) {
                    Text("Device storage")
                  }
            }
      },
      confirmButton = {},
      dismissButton = {
        Button(onClick = onDiscard, modifier = Modifier.fillMaxWidth().testTag("discardButton")) {
          Text("Discard PDF", color = Color.Red)
        }
      })
}

/**
...
          }
        }
      },
      confirmButton = {
        // Allow the user to create a new folder in which to store the generated pdf
        Button(
            modifier = Modifier.fillMaxWidth().testTag("createFolderButton"), onClick = onCreate) {
              Text("Create a new folder")
            }
      },
      dismissButton = {
        Button(
            onClick = onDismiss,
            modifier = Modifier.fillMaxWidth().testTag("cancelSelectFolderButton")) {
              Text("Cancel")
            }
      },
      modifier = Modifier.testTag("selectFolderDialog"))
}

/**
 * Composable for displaying a dialog to input the name of the new folder on folder creation
 *
 * @param onDismiss Action to be performed when the dialog is dismissed
...
 */
@Composable
fun InputNewFolderNameDialog(onDismiss: () -> Unit, onConfirm: (String) -> Unit) {
  var inputText by remember { mutableStateOf("") }

  AlertDialog(
      modifier = Modifier.testTag("inputNewFolderNameDialog"),
      onDismissRequest = onDismiss,
      title = {
        Text(
            "Enter a name for the new folder",
            modifier = Modifier.fillMaxWidth().testTag("inputNewFolderNameDialogTitle"),
            textAlign = TextAlign.Center)
      },
      text = {
        OutlinedTextField(
            value = inputText,
            onValueChange = { inputText = it },
            label = { Text("Folder name") },
            modifier = Modifier.fillMaxWidth().testTag("inputNewFolderNameField"))
      },
      confirmButton = {
        Button(
            enabled = inputText.isNotEmpty(),
            onClick = { onConfirm(inputText) },
            modifier = Modifier.testTag("confirmCreateFolderButton")) {
              Text("Create folder")
            }
      },
      dismissButton = {
        Button(onClick = onDismiss, modifier = Modifier.testTag("dismissCreateFolderButton")) {
          Text("Cancel")
...
