...

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun TopNavigationBar(
    navigationActions: NavigationActions,
    actions: @Composable() (RowScope.() -> Unit) = {},
    screenTitle: String?
) {
  TopAppBar(
      modifier =
          Modifier.fillMaxWidth()
              .background(
                  Brush.horizontalGradient(
                      colors =
                          listOf(
                              MaterialTheme.colorScheme.secondary,
                              MaterialTheme.colorScheme.primary)))
              .testTag("topNavigationBar"),
      title = {
        Box(modifier = Modifier.fillMaxWidth(), contentAlignment = Alignment.Center) {
          if (screenTitle == null) {
            // Display the app logo if no title is provided
            Image(
                painter = painterResource(id = R.drawable.eduverse_logo_png),
...
                modifier = Modifier.testTag("screenTitle"))
          }
        }
      },
      navigationIcon = {
        IconButton(
            onClick = { navigationActions.goBack() }, modifier = Modifier.testTag("goBackButton")) {
              Icon(
                  imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                  contentDescription = null,
                  tint = MaterialTheme.colorScheme.onTertiary)
            }
      },
...
